# PathfindingVisualizer

./: .gitignore  Makefile  README.md  package-lock.json  package.json
pathfinding-visualizer/src/: App.js
pathfinding-visualizer/src/PathfindingVisualizer/: PathfindingVisualizer.jsx
pathfinding_backend/: CMakeLists.txt  PathfinderResourceFactory.cpp  PathfinderService.cpp  PathfinderServiceSettingsFactory.cpp  main.cpp
pathfinding_backend/include/: IResourceFactory.h  IService.h  IServiceSettingsFactory.h  PathfinderResourceFactory.h  PathfinderService.h  PathfinderServiceSettingsFactory.h
pathfinding_frontend/: package-lock.json  package.json
pathfinding_frontend/src/: App.js
pathfinding_frontend/src/PathfindingVisualizer/: PathfindingAPI.js  PathfindingVisualizer.jsx
pathfinding_frontend/src/PathfindingVisualizer/Node/: Node.css
pathfinding_frontend/src/algorithms/: aStar.js  bfs.js  dfs.js  dijkstra.js
